CSS fix: Removed some extra padding that made the source mode transition jarring

--- a/src/themes/inc/defaultbase.less
+++ b/src/themes/inc/defaultbase.less
@@ -70,10 +70,6 @@ div.sceditor-dropdown div {
 		min-height: 1px;
 	}
 
-	.sceditor-container textarea {
-		margin: 7px 5px;
-	}
-
 	div.sceditor-dnd-cover {
 		position: absolute;
 		top: 0;
